@@ -23,11 +23,11 @@
     <parent>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>mojo-parent</artifactId>
-        <version>40</version>
+        <version>70</version>
     </parent>
 
     <artifactId>jaxb2-maven-plugin</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>3.2.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>JAXB-2 Maven Plugin</name>
@@ -79,6 +79,19 @@
         </developer>
     </developers>
 
+    <contributors>
+        <contributor>
+            <name>Adam Retter</name>
+            <email>adam@evolvedbinary.com</email>
+            <organization>Evolved Binary</organization>
+            <organizationUrl>https://www.evolvedbinary.com</organizationUrl>
+            <roles>
+                <role>Patch Contributor</role>
+            </roles>
+            <timezone>Europe/London</timezone>
+        </contributor>
+    </contributors>
+
     <prerequisites>
         <maven>${mavenVersion}</maven>
     </prerequisites>
@@ -100,35 +113,51 @@
 
     <properties>
         <!-- Define Maven and JDK versions-->
-        <mavenVersion>3.0.5</mavenVersion>
-        <mojo.java.target>1.7</mojo.java.target>
+        <mavenVersion>3.2.5</mavenVersion>
+        <mojo.java.target>1.8</mojo.java.target>
 
         <!-- Plexus component versions -->
-        <plexus-compiler-api.version>2.5</plexus-compiler-api.version>
-        <plexus-utils.version>3.1.0</plexus-utils.version>
+        <plexus-compiler-api.version>2.13.0</plexus-compiler-api.version>
+        <plexus-utils.version>3.5.0</plexus-utils.version>
         <plexus-build-api.version>0.0.7</plexus-build-api.version>
 
         <!-- JAXB tooling versions -->
-        <jaxb.version>2.3.0</jaxb.version>
-        <stax-ex.version>1.7.8</stax-ex.version>
-        <qdox.version>2.0-M8</qdox.version>
-        <asm.version>6.2.1</asm.version>
+        <jaxb.version>3.0.2</jaxb.version>
+        <stax-ex.version>2.1.0</stax-ex.version>
+        <qdox.version>2.0.2</qdox.version>
+        <asm.version>9.4</asm.version>
 
         <!-- Test scope dependencies' versions -->
-        <xmlunit.version>2.5.1</xmlunit.version>
-        <nazgul-core-xmlbinding-test.version>1.7.1</nazgul-core-xmlbinding-test.version>
-        <maven-plugin-plugin.version>3.5.1</maven-plugin-plugin.version>
+        <xmlunit.version>2.9.0</xmlunit.version>
+        <maven-plugin-plugin.version>3.7.0</maven-plugin-plugin.version>
+        <shared-algorithms.version>0.12.0</shared-algorithms.version><!-- 0.13 require 11 -->
+        <project.build.outputTimestamp>2022-04-20T23:14:54Z</project.build.outputTimestamp>
     </properties>
 
     <dependencyManagement>
         <dependencies>
 
             <dependency>
-                <groupId>org.glassfish.jaxb</groupId>
-                <artifactId>jaxb-bom</artifactId>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-xjc</artifactId>
                 <version>${jaxb.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-jxc</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>se.jguru.shared.algorithms.api</groupId>
+                <artifactId>jguru-shared-algorithms-api</artifactId>
+                <version>${shared-algorithms.version}</version>
             </dependency>
 
             <dependency>
@@ -156,45 +185,12 @@
             within the JAXB RI artifacts.
         -->
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${jaxb.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-xjc</artifactId>
-            <exclusions>
-                <!--
-                    Classes from tools.jar must be loaded by the plugin to enable schemagen.
-                    However, this hampers JDK 9 adoption.
-                -->
-                <exclusion>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-jxc</artifactId>
-            <exclusions>
-                <!--
-                    Classes from tools.jar must be loaded by the plugin to enable schemagen.
-                    However, this hampers JDK 9 adoption.
-                -->
-                <exclusion>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- QDox, used for JavaDoc processing -->
@@ -209,37 +205,31 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${mavenVersion}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${mavenVersion}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
             <version>${mavenVersion}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>${mavenVersion}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>${maven-plugin-plugin.version}</version>
-            <!--
-                Annotations are not needed for plugin execution.
-                Therefore, use optional scope.
-            -->
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.maven.skins</groupId>
-            <artifactId>maven-fluido-skin</artifactId>
-            <version>1.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--
@@ -264,12 +254,12 @@
         <!--
             Xalan dependency (to avoid subtle differences in output between Java versions)
         -->
-        <dependency>
+        <!-- dependency>
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency -->
 
         <!--
             Test-scope dependencies.
@@ -284,11 +274,22 @@
             <artifactId>xmlunit-matchers</artifactId>
             <version>${xmlunit.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>se.jguru.nazgul.test.xmlbinding</groupId>
-            <artifactId>nazgul-core-xmlbinding-test</artifactId>
-            <version>${nazgul-core-xmlbinding-test.version}</version>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-legacy</artifactId>
+            <version>${xmlunit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>se.jguru.shared.algorithms.api</groupId>
+            <artifactId>jguru-shared-algorithms-api</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -300,12 +301,13 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
+            <version>1.4.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.istack</groupId>
             <artifactId>istack-commons-runtime</artifactId>
+            <version>4.1.1</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
@@ -317,17 +319,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.7.1</version>
                     <configuration>
                         <skipDeploy>true</skipDeploy><!-- don't deploy site with maven-site-plugin -->
                     </configuration>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>${asm.version}</version> <!-- Use newer version of ASM -->
-                        </dependency>
-                    </dependencies>
                 </plugin>
 
                 <plugin>
@@ -337,13 +331,6 @@
                     <configuration>
                         <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                     </configuration>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.maven.plugin-tools</groupId>
-                            <artifactId>maven-plugin-annotations</artifactId>
-                            <version>${maven-plugin-plugin.version}</version>
-                        </dependency>
-                    </dependencies>
                     <executions>
                         <execution>
                             <id>help-mojo</id>
@@ -374,7 +361,7 @@
             <plugin>
                 <groupId>org.apache.servicemix.tooling</groupId>
                 <artifactId>depends-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>1.4.0</version>
                 <executions>
                     <execution>
                         <id>generate-depends-file</id>
@@ -412,7 +399,7 @@
                     <dependency>
                         <groupId>net.sourceforge.plantuml</groupId>
                         <artifactId>plantuml</artifactId>
-                        <version>8017</version>
+                        <version>8059</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -425,112 +412,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>${maven-plugin-plugin.version}</version>
-                <configuration>
-                    <requirements>
-                        <!--
-                        NOTE: Maven 2.x does not interpolate properties of the form project.*|pom.* so the Maven Plugin Plugin
-                        gets garbage when manually examining the config of the Maven Compiler Plugin.
-                        -->
-                        <jdk>${mojo.java.target}</jdk>
-                    </requirements>
-                </configuration>
             </plugin>
         </plugins>
     </reporting>
 
     <profiles>
-
-        <profile>
-            <id>default-tools.jar</id>
-            <activation>
-                <jdk>(,9)</jdk> <!-- System.getProperty( “java.version” ) -->
-            </activation>
-
-            <dependencies>
-                <dependency>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                    <version>1.4.2</version>
-                    <scope>system</scope>
-                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <!--
-            Augment the build module path to include javax.bind when compiling using java 9+
-
-            When: Compiling with java 9+
-        -->
-        <profile>
-            <id>jdk9</id>
-
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-
-            <properties>
-                <mojo.java.target>9</mojo.java.target>
-                <codecoverage>false</codecoverage>
-            </properties>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.glassfish.jaxb</groupId>
-                    <artifactId>jaxb-jxc-jdk9</artifactId>
-                    <version>${jaxb.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.glassfish.jaxb</groupId>
-                    <artifactId>jaxb-xjc-jdk9</artifactId>
-                    <version>${jaxb.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>javax.activation</groupId>
-                    <artifactId>javax.activation-api</artifactId>
-                    <version>1.2.0</version>
-                </dependency>
-            </dependencies>
-
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>3.5.1</version>
-                            <configuration>
-                                <source>${mojo.java.target}</source>
-                                <target>${mojo.java.target}</target>
-                                <compilerArgs>
-                                    <arg>--add-modules</arg>
-                                    <arg>java.xml.bind</arg>
-                                </compilerArgs>
-                            </configuration>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.ow2.asm</groupId>
-                                    <artifactId>asm</artifactId>
-                                    <version>6.1.1</version> <!-- Use newer version of ASM -->
-                                </dependency>
-                            </dependencies>
-                        </plugin>
-
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <version>2.19.1</version>
-                            <configuration>
-                                <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
-                                <argLine>--add-modules=java.xml.bind</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-
         <!--
             Run all integration tests, unless the "skipTests" flag is set.
 
@@ -549,6 +435,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-invoker-plugin</artifactId>
+                        <version>3.3.0</version>
                         <configuration>
                             <debug>true</debug>
                             <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
@@ -571,9 +458,19 @@
                         </executions>
                         <dependencies>
                             <dependency>
-                                <groupId>com.sun.activation</groupId>
-                                <artifactId>javax.activation</artifactId>
-                                <version>1.2.0</version>
+                                <groupId>org.xmlunit</groupId>
+                                <artifactId>xmlunit-matchers</artifactId>
+                                <version>${xmlunit.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.xmlunit</groupId>
+                                <artifactId>xmlunit-core</artifactId>
+                                <version>${xmlunit.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>jakarta.activation</groupId>
+                                <artifactId>jakarta.activation-api</artifactId>
+                                <version>2.1.0</version>
                             </dependency>
                         </dependencies>
                     </plugin>
